<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/premiumiconwitter"
        tools:ignore="ImageContrastCheck,MissingConstraints"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="698dp"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/premiumiconfacebook"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="698dp"
        android:contentDescription="@string/todo"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/premiumiconwhatsapp"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="698dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/premiumiconinstagram"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="698dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/imagehh"
        tools:layout_editor_absoluteX="229dp"
        tools:layout_editor_absoluteY="652dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quot_quot"
        android:textSize="9sp"
        tools:layout_editor_absoluteX="305dp"
        tools:layout_editor_absoluteY="667dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="239dp"
        android:layout_height="48dp"
        android:backgroundTint="#A3D5ED"
        android:text="@string/в"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#040000"
        android:textSize="14sp"
        android:textStyle="normal"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="581dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="239dp"
        android:layout_height="48dp"
        android:backgroundTint="#A3D5ED"
        android:text="@string/у"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#040000"
        android:textSize="14sp"
        android:textStyle="normal"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="500dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="171dp"
        android:layout_height="87dp"
        android:text="@string/_4"
        android:textSize="13sp"
        tools:layout_editor_absoluteX="217dp"
        tools:layout_editor_absoluteY="159dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="81dp"
        android:layout_height="16dp"
        android:text="@string/рк"
        android:textSize="13sp"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="278dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ц3"
        android:textColorHint="#000000"
        android:textSize="17sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="116dp"
        tools:layout_editor_absoluteY="85dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/уц"
        android:textColorHint="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="217dp"
        tools:layout_editor_absoluteY="128dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/кк"
        android:textColorHint="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="319dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/line"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="24dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/line"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="34dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/line"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="44dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoText="false"
        android:backgroundTint="@color/black"
        android:text="@string/quot_quotк"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="24dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/imagenvv"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="120dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/vector"
        tools:layout_editor_absoluteX="199dp"
        tools:layout_editor_absoluteY="286dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/vector"
        tools:layout_editor_absoluteX="358dp"
        tools:layout_editor_absoluteY="286dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/rectanglezcs"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="358dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/цу"
        android:textColor="#00695C"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="368dp" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/rectanglezcs"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="430dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ку"
        android:textColor="#00695C"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="438dp" />
</androidx.constraintlayout.widget.ConstraintLayout>