<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="48dp"
        android:layout_height="48dp"
        tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck"
        tools:layout_editor_absoluteX="200dp"
        tools:layout_editor_absoluteY="353dp" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="48dp"
        android:layout_height="48dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="353dp" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="203dp"
        tools:layout_editor_absoluteY="160dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/line"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="24dp"
        android:contentDescription="@string/todo"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/line"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="34dp"
        android:contentDescription="@string/todo"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/line"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="44dp"
        android:contentDescription="@string/todo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoText="false"
        android:backgroundTint="@color/black"
        android:text="@string/quot_quote"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="24dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/п5к"
        android:textColorHint="#000000"
        android:textSize="17sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="83dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/та"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="113dp"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="160dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/imagerr"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="160dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/imagejj"
        tools:ignore="MissingConstraints,ImageContrastCheck"
        tools:layout_editor_absoluteX="236dp"
        tools:layout_editor_absoluteY="169dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/imagekkk"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="378dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/imagel"
        tools:ignore="MissingConstraints,ImageContrastCheck"
        tools:layout_editor_absoluteX="231dp"
        tools:layout_editor_absoluteY="362dp"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="239dp"
        android:layout_height="48dp"
        android:backgroundTint="#A3D5ED"
        android:text="@string/гн"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#040000"
        android:textSize="14sp"
        android:textStyle="normal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="537dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ectangle"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="597dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="279dp"
        android:layout_height="37dp"
        android:text="@string/р5р5"
        android:textSize="11sp"
        tools:layout_editor_absoluteX="66dp"
        tools:layout_editor_absoluteY="597dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ещвщ"
        app:srcCompat="@drawable/premiumiconwitter"
        tools:ignore="MissingConstraints,ImageContrastCheck"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="698dp" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/premiumiconfacebook"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="698dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/premiumiconwhatsapp"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="698dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/premiumiconinstagram"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="698dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/imagehh"
        tools:layout_editor_absoluteX="229dp"
        tools:layout_editor_absoluteY="652dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quot_quotрр"
        android:textSize="9sp"
        tools:layout_editor_absoluteX="305dp"
        tools:layout_editor_absoluteY="667dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>